# ics_calendar_utils

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SESSION_COMPLETION_SUMMARY.md  pyproject.toml  rugby_fixtures.ics  work_events.ics
.dev-scripts/: format.sh  release.sh  run.sh  test.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml  version-bump.yml
config/: config.yaml.example
docs/: README.md  examples.md
examples/: basic_usage.py
scripts/: sync_versions.py
src/ics_calendar_utils/: __init__.py  config.py  event_processor.py  ics_generator.py
tests/: conftest.py  test_ics_calendar_utils.py
