[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ronschaeffer-ics-calendar-utils"
version = "0.1.0"
description = "Python utility library for generating and manipulating ICS calendar files"
authors = ["ronschaeffer"]
readme = "README.md"
license = "MIT"
keywords = ["python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "ics_calendar_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
python-dotenv = "^1.0"
# Add your library dependencies here

[tool.poetry.group.dev.dependencies]
ruff = "^0.12"
pytest = "^8.0"
pytest-cov = "^6.2"
pre-commit = "^4.2.0"

[tool.poetry.urls]
Homepage = "https://github.com/ronschaeffer/ics_calendar_utils"
Repository = "https://github.com/ronschaeffer/ics_calendar_utils.git"
Issues = "https://github.com/ronschaeffer/ics_calendar_utils/issues"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ics_calendar_utils",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with -m \"not slow\")",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
